<resources>
    <string name="app_name">Books</string>
    <string name="label_thumbnail">Book thumbnail</string>

    <string name="login_hint">Your login</string>
    <string name="login_button">Login</string>

    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_search">Advanced Search</string>

    <string name="error_fetching_failed">Couldn\'t load books from library. Please swipe to t</string>
    <string name="message_permission_denied_cant_export">We are not able to export your library without permission.</string>
    <string name="message_permission_denied_cant_import">We are not able to import library without permission.</string>
    <string name="message_export_successful">Your library were exported successfully.</string>
    <string name="error_export_failed">Due to an error we weren\'t able to export your library.</string>
    <string name="empty_library">Your library is empty:(\nWhy don\'t you add a book?</string>

    <string name="message_import_successful">Library were imported successfully.</string>
    <string name="error_import_failed">Due to an error we weren\'t able to import library.</string>
    <string name="book_delete_snackbar">Sure you want to delete?</string>

    <string name="undo">Undo</string>

    <!--Adding book-->
    <string name="cover_imageUrl_hint">Paste cover image url here. It has to start with \"http\".</string>
    <string name="book_title_hint">Title</string>
    <string name="book_author_hint">Author</string>
    <string name="book_category_hint">Category</string>
    <string name="book_description_hint">Description</string>
    <string name="publisher">Publisher</string>
    <string name="year">Year</string>
    <string name="book_add">Save</string>
    <string name="saving_book_error">We were not able to save your book.</string>
    <string name="saving_book_validation_error">Provided data are not valid.</string>

    <!--Removing book-->
    <string name="remove_book_error">We encountered problem with removing book.</string>
    <string name="remove_book">Remove book</string>
    <string name="removing_book">Removing book</string>
    <string name="removing_book_snackbar">The book has been removed.</string>
    <string name="removing_book_dialog_frag">Are you sure you want to remove this book from your library?</string>
    <string name="delete">Delete</string>

    <!--Editing book-->
    <string name="edit_book">Edit book</string>
    <string name="no_book">The book was not found.</string>

    <!--Searching book-->
    <string name="search_hint">Search books</string>
    <string name="search_action">Search</string>
    <string name="advanced_search">Fill at least one field: </string>
    <string name="rating">With rating</string>
    <string name="search_no_result">There are no books\nmatching your criteria.</string>


</resources>
